# tony-tests

./: .gitignore  README.md  cli.py  jp.py  pyproject.toml  tony.py  update.py
tony_tests/: settings.py  utils.py
tony_tests/cli/: jp.py  tony.py  update.py
tony_tests/fixtures/03_marketing/: emails.csv  names.csv  output.csv
tony_tests/fixtures/04_fulfillment/: manifest.csv
tony_tests/problems/: 01_fizzbuzz.md  02_word_counts.md  03_marketing.md  04_fulfillment.md
tony_tests/templates/: 03_marketing.py  04_fulfillment.py  default.txt
tony_tests/tests/: test_01_fizzbuzz.py  test_02_word_counts.py  test_03_marketing.py  test_04_fulfillment.py  utils.py
